Home/css/main.css
body
{
    background-repeat: no-repeat;
    background-size:cover;

    -webkit-animation: mymove 50s infinite; /* Chrome, Safari, Opera */ 
    animation: mymove 50s infinite;
}

/* Chrome, Safari, Opera */ 
@-webkit-keyframes mymove {
    0%   {background-image: url("http://www.isaaczinda.com/Home/img/Fishing.JPG");}
    45%   {background-image: url("http://www.isaaczinda.com/Home/img/Fishing.JPG");}
    50%  {background-image: url("http://www.isaaczinda.com/Home/img/Canyoneering.JPG");}
    95%   {background-image: url("http://www.isaaczinda.com/Home/img/Canyoneering.JPG");}
    100% {background-image: url("http://www.isaaczinda.com/Home/img/Fishing.JPG");}
}

/* Standard syntax */
@keyframes mymove {
    0%   {background-image: url("http://www.isaaczinda.com/Home/img/Fishing.JPG");}
    45%   {background-image: url("http://www.isaaczinda.com/Home/img/Fishing.JPG");}
    50%  {background-image: url("http://www.isaaczinda.com/Home/img/Canyoneering.JPG");}
    95%   {background-image: url("http://www.isaaczinda.com/Home/img/Canyoneering.JPG");}
    100% {background-image: url("http://www.isaaczinda.com/Home/img/Fishing.JPG");}
}

h1 small
{
	color: #cccccc;
}

.hover
{
	background-color: #68A1BB;
}

.Current
{
	background-color: #28415B;
}

#Content > div
{
	padding-top: 20px;
	padding-bottom: 20px;
	background-color: rgba(0, 0, 0, .35);
	border-radius: 5px;
}

footer
{
	padding-top: 10px;
	padding-bottom: 5px;
	background-color: rgba(0, 0, 0, .45);
	border-radius: 5px;
}

#navbar > li > a
{
	color: white;
}

#navbar > li
{
	-webkit-transition:background-color .5s;
    transition:background-color .5s;
}

footer p
{
	padding-top: 0px;
	padding-bottom: 0px;
	margin-bottom: 0px;
	margin-top: 0px;
}

